feat: ajuste produccion